# Vehicle_Insurance_MLOps

./: .gitignore  LICENSE  README.md  demo.py  projectflow.txt  pyproject.toml  setup.py
Notebook/: mongoDB_demo.ipynb
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/pipline/: training_pipeline.py
